# behemoth

./: .gitmodules  CMakeLists.txt  README.md  license.txt
core/: CMakeLists.txt
core/conf/: core.conf
core/src/: CMakeLists.txt  Doxyfile  constants.h  main.cpp
core/src/algorithm/: CMakeLists.txt  algostring.cpp  algostring.h
core/src/application/: CMakeLists.txt  abstractevent.cpp  abstractevent.h  abstractlayer.cpp  abstractlayer.h  abstractscene.cpp  abstractscene.h  application.cpp  application.h  basicguilayer.cpp  basicguilayer.h  basicscene3dlayer.cpp  basicscene3dlayer.h  defaultscene.cpp  defaultscene.h  event.cpp  event.h  eventmouseclick.cpp  eventmouseclick.h  painter.cpp  painter.h
core/src/events/: CMakeLists.txt  abstractevent.h  eventmouseclick.cpp  eventmouseclick.h
core/src/factory/: CMakeLists.txt  fontfactory.cpp  fontfactory.h  shaderfactory.cpp  shaderfactory.h  texturefactory.cpp  texturefactory.h
core/src/fonts/: CMakeLists.txt  font.cpp  font.h  fontfactory.cpp  fontfactory.h
core/src/gl/: CMakeLists.txt  shader.cpp  shader.h  shaderfactory.cpp  shaderfactory.h  texture.cpp  texture.h  texturefactory.cpp  texturefactory.h  vertexarrayobject.cpp  vertexarrayobject.h  vertexbufferobject.cpp  vertexbufferobject.h
core/src/gli/: CMakeLists.txt
core/src/glm/: CMakeLists.txt
core/src/glsl/: CMakeLists.txt  test.frag  test.vert
core/src/log/: CMakeLists.txt  log.cpp  log.h
core/src/lua/: CMakeLists.txt  abstracteventlistener.h  basicluamanager.cpp  basicluamanager.h  guimanager.cpp  guimanager.h  luawrapper.h  luawrapperimpl.cpp  luawrapperimpl.h  resourcemanager.cpp  resourcemanager.h  scene3dmanager.cpp  scene3dmanager.h
core/src/manager/: CMakeLists.txt  guimanager.cpp  guimanager.h  luamanager.cpp  luamanager.h  luawrapper.h  resourcemanager.cpp  resourcemanager.h  textureloadmanager.cpp  textureloadmanager.h
core/src/object/: CMakeLists.txt  abstractentity.h  basic2dentity.cpp  basic2dentity.h  camera.cpp  camera.h  entity.cpp  entity.h  font.cpp  font.h  light.cpp  light.h  material.h  rectangle.cpp  rectangle.h  rectanglefont.cpp  rectanglefont.h  rectanglesymbol.cpp  rectanglesymbol.h  rectangletext.cpp  rectangletext.h  triangle.cpp  triangle.h
core/src/objects/: CMakeLists.txt  abstractentity.h
core/src/objects/3d/: CMakeLists.txt  abstractcamera.h  abstractlight.h  basic3dentity.cpp  basic3dentity.h  basiccamera.cpp  basiccamera.h  basiclight.cpp  basiclight.h  camerafactory.cpp  camerafactory.h  directionlight.cpp  directionlight.h  entity3dfactory.h  entityfactory.cpp  entityfactory.h  light.h  lightfactory.cpp  lightfactory.h  material.cpp  orthocamera.cpp  orthocamera.h  perspectivecamera.cpp  perspectivecamera.h  pointlight.cpp  pointlight.h
core/src/objects/3d/camera/: CMakeLists.txt  abstractcamera.h  basiccamera.cpp  basiccamera.h  camerafactory.cpp  camerafactory.h  orthocamera.cpp  orthocamera.h  perspectivecamera.cpp  perspectivecamera.h
core/src/objects/3d/light/: CMakeLists.txt  abstractlight.h  basiclight.cpp  basiclight.h  directionlight.cpp  directionlight.h  lightfactory.cpp  lightfactory.h  pointlight.cpp  pointlight.h
core/src/objects/3d/object/: CMakeLists.txt  object3d.cpp  object3d.h  objectfactory.cpp  objectfactory.h
core/src/objects/3d/object/entity/: CMakeLists.txt  basic3dentity.cpp  basic3dentity.h  entity3dfactory.cpp  entity3dfactory.h
core/src/objects/3d/object/node/: CMakeLists.txt  basicnode.cpp  basicnode.h  nodefactory.cpp  nodefactory.h
core/src/objects/gui/: CMakeLists.txt  basic2dentity.cpp  basic2dentity.h  entity2dfactory.cpp  entity2dfactory.h  rectangle.cpp  rectangle.h  rectangledecoration.h  rectanglesymbol.cpp  rectanglesymbol.h  rectangletext.cpp  rectangletext.h  textbuffer.cpp  textbuffer.h
core/src/openglstuff/: CMakeLists.txt  font.cpp  font.h  shader.cpp  shader.h  vertexarrayobject.cpp  vertexarrayobject.h  vertexbufferobject.cpp  vertexbufferobject.h
core/src/scripts/: CMakeLists.txt  conf.lua  folders.lua  rectangle.lua  rectanglefont.lua  rectangletext.lua  test.lua  triangle.lua  vec.lua
core/test/: CMakeLists.txt  CMakeLists.txt~
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  core.conf  example_cube_with_label.cpp  example_messagebox.cpp
examples/src/gui/: example_cube_with_label.lua  example_messagebox.lua
examples/src/layers/: CMakeLists.txt  guilayer.cpp  guilayer.h
examples/src/scenes/: scene_with_box.lua
include/allegro5/platform/: alplatf.h
include/core/: application.h  defaultscene.h  painter.h
include/core/algorithm/: algostring.h
include/core/application/: abstractlayer.h  application.h  basicguilayer.h  basicscene3dlayer.h
include/core/events/: abstractevent.h  eventmouseclick.h
include/core/factory/: fontfactory.h  shaderfactory.h  texturefactory.h
include/core/fonts/: font.h  fontfactory.h
include/core/lua/: guimanager.h  scene3dmanager.h
include/core/manager/: guimanager.h  luamanager.h  luawrapper.h  resourcemanager.h  textureloadmanager.h
include/core/objects/: abstractentity.h  camera.h  entity.h  font.h  light.h  material.h  textbuffer.h
include/core/objects/2d/: basic2dentity.h  rectangle.h  rectanglefont.h  rectangletext.h  triangle.h
include/core/objects/3d/: camerafactory.h  entity3dfactory.h  entityfactory.h  lightfactory.h  nodefactory.h  object3d.h  object3dfactory.h
include/core/objects/gui/: basic2dentity.h  entity2dfactory.h  rectangle.h  rectangletext.h  textbuffer.h
include/core/ogl/: ogl.h  shader.h  shaderfactory.h  texture.h  texturefactory.h  vertexarrayobject.h  vertexbufferobject.h
include/gl/: gl.h
include/gli/: gli.h  glitexture2d.h
include/glm/: ext.h  glm.h
include/lua/: lua.h
labs4physics/: CMakeLists.txt
labs4physics/src/: CMakeLists.txt  core.conf  main.cpp
labs4physics/src/gui/: example.lua  example1.lua
labs4physics/src/layers/: guilayer.cpp  guilayer.h
res/meshes/: box.mesh
res/pictures/textures/: test.dds
res/shaders/: gui.frag  gui.vert  phong.frag  phong.vert  test.frag  test.vert  text.frag  text.vert
